--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -128,6 +128,37 @@
     to {transform:translatex(0px); opacity: 1}
 }
 
+/* The Modal (background) */
+.modal4 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content4 {
+    position: relative;
+    top: 35%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 189px;
+    height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    font-size: 0.9em;
+    text-align: center;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+}
+
+
 .croplabel {
     color: white;
     font-size: 1.5em;
