fix issues with going to profile and back, dropdown options, and added link to avatar

--- a/app/assets/stylesheets/locationstyle.css
+++ b/app/assets/stylesheets/locationstyle.css
@@ -124,6 +124,10 @@ body, html {
     margin-bottom: 1vh;
 }
 
+.currentAvatar:hover {
+	cursor: pointer;
+}
+
 .inputfile {
 	width: 0.1px;
 	height: 0.1px;
