--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -49,6 +49,10 @@
     margin-top: 0.3vh;
 }
 
+#avatar:hover {
+    cursor: pointer;
+}
+
 .iconlogo {
     background-image: image-url("markcoiconlogo.png");
     background-size: contain;
